--- a/tasks/assert.yml
+++ b/tasks/assert.yml
@@ -103,7 +103,7 @@
           - item.name is string
           - item.name is not none
           - item.address is defined
-          - item.address is string
+          - item.address is string or (item.address is iterable and item.address is not mapping)
           - item.address is not none
           - item.port is defined
           - item.port is number
@@ -300,7 +300,7 @@
           - item.name is string
           - item.name is not none
           - item.address is defined
-          - item.address is string
+          - item.address is string or (item.address is iterable and item.address is not mapping)
           - item.address is not none
           - (item.balance is defined
             and item.balance is string
